# Libreria

./: .gitignore  CMakeLists.txt  README.md  README.txt  fastdeploy.sh
.github/workflows/: cmake-single-platform.yml
include/: Book.h  BookShelf.h  Bookshelf.h  Date.h
src/: Book.cpp  BookShelf.cpp  Bookshelf.cpp  Date.cpp  main.cpp
src/testing/: book_test.cpp  library_prof_test.cpp
